<?xml version="1.0" encoding="utf-8"?>
<!--
- @Author Nicholas Leong        EDUV4551823
- @Author Aarya Manowah         be.2023.q4t9k6
- @Author Nyasha Masket 		BE.2023.R3M0Y0
- @Author Sakhile Lesedi Mnisi 	BE.2022.j9f3j4
- @Author Dominic Newton 		EDUV4818782
- @Author Kimberly Sean Sibanda EDUV4818746
-
- Supervisor: Stacey Byrne      Stacey.byrne@eduvos.com
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GamesScreen">


<!--    <ImageButton-->
<!--        android:id="@+id/back_arrow"-->
<!--        android:layout_width="45sp"-->
<!--        android:layout_height="45sp"-->
<!--        android:contentDescription="@string/cancel_button"-->
<!--        android:background="@drawable/back_arrow"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.125"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.065"/>-->

    <TextView
        android:id="@+id/headingMain"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/headingMain"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/orangeHeading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/descriptionMain"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="@string/descriptionMain"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <ImageButton
        android:id="@+id/matchingGame"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:contentDescription="@string/matchingGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303"
        app:srcCompat="@drawable/matching_game_pic" />

    <ImageButton
        android:id="@+id/definitionBuilder"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:contentDescription="@string/definitionBuilder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303"
        app:srcCompat="@drawable/definition_builder_pic" />

    <ImageButton
        android:id="@+id/crossword"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:contentDescription="@string/crossword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632"
        app:srcCompat="@drawable/crossword_pic" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/quote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/gameQuote"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/nav_bar_background"
        app:itemActiveIndicatorStyle="@null"
        app:itemIconSize="28dp"
        app:itemIconTint="@color/white"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>