<?xml version="1.0" encoding="utf-8"?>
<!--
- @Author Nicholas Leong        EDUV4551823
- @Author Aarya Manowah         be.2023.q4t9k6
- @Author Nyasha Masket 		BE.2023.R3M0Y0
- @Author Sakhile Lesedi Mnisi 	BE.2022.j9f3j4
- @Author Dominic Newton 		EDUV4818782
- @Author Kimberly Sean Sibanda EDUV4818746
-
- Supervisor: Stacey Byrne      Stacey.byrne@eduvos.com
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".DefinitionBuilder"
    android:background="@color/black">

    <TextView
        android:id="@+id/headingDB"
        android:layout_width="344dp"
        android:layout_height="40dp"
        android:text="@string/headingDB"
        android:textAlignment="center"
        android:textColor="@color/orangeHeading"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/descriptionDB"
        android:layout_width="363dp"
        android:layout_height="69dp"
        android:text="@string/descriptionDB"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="45sp"
        android:layout_height="45sp"
        android:contentDescription="@string/cancel_button"
        android:background="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"/>

    <!--    <View-->
    <!--        android:id="@+id/dividerTop"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:background="?android:attr/listDivider"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/descriptionDB"-->
    <!--        app:layout_constraintVertical_bias="0.108" />-->

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="375dp"
        android:layout_height="12dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <TextView
        android:id="@+id/termToDisplay"
        android:layout_width="403dp"
        android:layout_height="39dp"
        android:gravity="center"
        android:text="@string/defaultTerm"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" />

    <!--    app:layout_constraintTop_toBottomOf="@id/dividerTop"-->
    <!--    <View-->
    <!--        android:id="@+id/dividerBottom"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="?android:attr/listDivider"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/wordDropZone"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"/>-->

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/wordDropZone"
        android:layout_width="400dp"
        android:layout_height="206dp"
        android:background="@drawable/db_drop_zone_background"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:alignContent="flex_start"
        app:flexWrap="wrap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409">
        <!-- Word TextViews will be added here programmatically -->
    </com.google.android.flexbox.FlexboxLayout>


    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexboxLayoutWordChoices"
        android:layout_width="401dp"
        android:layout_height="207dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/db_word_zone_background"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:alignContent="flex_start"
        app:flexWrap="wrap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77">
        <!--        app:layout_constraintTop_toBottomOf="@id/dividerBottom"-->

        <!-- Individual words will be added here programmatically -->

    </com.google.android.flexbox.FlexboxLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/checkButton"
        android:layout_width="384dp"
        android:layout_height="79dp"
        android:background="@drawable/db_check_button"
        android:text="@string/check_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <TextView
        android:id="@+id/stopwatchTimer"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:text="@string/defaultTime"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

</androidx.constraintlayout.widget.ConstraintLayout>